<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenProdActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="70dp"
        android:layout_height="34dp"
        android:text="Men"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView

        android:id="@+id/scrollViewMen"
        android:layout_width="410dp"
        android:layout_height="520dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="vertical"
            android:rowCount="4">

            <Button
                android:id="@+id/menprod1"
                android:layout_width="161dp"
                android:layout_height="200dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/men1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />


            <Button
                android:id="@+id/menprod2"
                android:layout_width="161dp"
                android:layout_height="200dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/men2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/womenprod1"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <Button
                android:id="@+id/menprod3"
                android:layout_width="161dp"
                android:layout_height="200dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/men3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/womenprod1" />

            <Button
                android:id="@+id/menprod4"
                android:layout_width="161dp"
                android:layout_height="200dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/men4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/womenprod3"
                app:layout_constraintTop_toBottomOf="@+id/womenprod2" />

            <Button
                android:id="@+id/menprod5"
                android:layout_width="161dp"
                android:layout_height="200dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/men5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/womenprod3" />

            <Button
                android:id="@+id/menprod6"
                android:layout_width="161dp"
                android:layout_height="200dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/men6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/womenprod5"
                app:layout_constraintTop_toBottomOf="@+id/womenprod4" />

            <Button
                android:id="@+id/menprod7"
                android:layout_width="161dp"
                android:layout_height="200dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/men9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/womenprod7"
                app:layout_constraintTop_toBottomOf="@+id/womenprod6" />

            <Button
                android:id="@+id/menprod8"
                android:layout_width="161dp"
                android:layout_height="200dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/men8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/womenprod7"
                app:layout_constraintTop_toBottomOf="@+id/womenprod6" />

            <TextView
                android:id="@+id/nameMenProd1"
                android:layout_width="161dp"
                android:layout_height="20dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="145dp"
                android:text="@string/NameMenProd1"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />
            <!--                app:layout_constraintTop_toBottomOf="@+id/menprod1" />-->

            <TextView
                android:id="@+id/priceMenProd1"
                android:layout_width="161dp"
                android:layout_height="25dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="165dp"
                android:text="@string/PriceMenProd1"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/nameMenProd2"
                android:layout_width="161dp"
                android:layout_height="25dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="145dp"
                android:text="@string/NameMenProd2"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/priceMenProd2"
                android:layout_width="161dp"
                android:layout_height="25dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="165dp"
                android:text="@string/PriceMenProd2"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/nameMenProd3"
                android:layout_width="161dp"
                android:layout_height="25dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="145dp"
                android:text="@string/NameMenProd3"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/priceMenProd3"
                android:layout_width="161dp"
                android:layout_height="25dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="165dp"
                android:text="@string/PriceMenProd3"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/nameMenProd4"
                android:layout_width="161dp"
                android:layout_height="25dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="145dp"
                android:text="@string/NameMenProd4"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/priceMenProd4"
                android:layout_width="161dp"
                android:layout_height="20dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="165dp"
                android:text="@string/PriceMenProd4"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/nameMenProd5"
                android:layout_width="161dp"
                android:layout_height="20dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="145dp"
                android:text="@string/NameMenProd5"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/priceMenProd5"
                android:layout_width="161dp"
                android:layout_height="20dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="165dp"
                android:text="@string/PriceMenProd5"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/nameMenProd6"
                android:layout_width="161dp"
                android:layout_height="25dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="145dp"
                android:text="@string/NameMenProd6"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/priceMenProd6"
                android:layout_width="161dp"
                android:layout_height="20dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="165dp"
                android:text="@string/PriceMenProd6"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/nameMenProd7"
                android:layout_width="161dp"
                android:layout_height="20dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="145dp"
                android:text="@string/NameMenProd7"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/priceMenProd7"
                android:layout_width="161dp"
                android:layout_height="20dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="165dp"
                android:text="@string/PriceMenProd7"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/nameMenProd8"
                android:layout_width="161dp"
                android:layout_height="20dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="145dp"
                android:text="@string/NameMenProd8"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

            <TextView
                android:id="@+id/priceMenProd8"
                android:layout_width="161dp"
                android:layout_height="20dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="165dp"
                android:text="@string/PriceMenProd8"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent" />

        </GridLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>